--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ p {
   border-radius: 20px;
 }
 .second{
-  background-image: url("https://f.i.uol.com.br/folha/cotidiano/images/16166122.jpeg");
+  background-image: url("https://assets.almanaquesos.com/wp-content/uploads/2017/04/metro-holborn-londres-escada-rolante-esquerda-livre-sossolteiros.jpg");
   background-size: cover;
   border-radius: 20px;
 }
